syntax = "proto3";

package pb;
import "barber/rpc_barbershops_get.proto";

option go_package = "barbershop/src/pb/barber";


message ListBarberShopsRequest {}

message ListBarberShopsResponse {
    repeated GetBarberShopResponse barber_shops = 1;
}