syntax = "proto3";

package pb;

import "barber/service_package.proto";
import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/barber";

message CreateServicePackageRequest{
    string barber_shop_id = 1;
    string name = 2;
    int32 gender_id = 3;
    int32 timer = 4;
    float price = 5;
    optional string description = 6;
    optional string image_url = 7;
    repeated string service_items = 8;
}

message CreateServicePackageResponse{
    ServicePackage service_package = 1;
}

// detail
message GetServicePackageRequest{
    string id = 1;
}

message GetServicePackageResponse {
    ServicePackageItem service_package_item = 1;
}

// list
message ListServicePackageRequest{
    string barber_shop_id = 1;
}

message ListServicePackageResponse {
    repeated ServicePackage service_packages = 1;
}

message UpdateServicePackageRequest{
    string id = 1;
    string barber_shop_id = 2;
    optional int32 gender_id = 3;
    optional string name = 4;
    optional int32 timer = 5;
    optional float price = 6;
    optional string description = 7;
    optional string image_url = 8;
    optional bool is_active = 9;
    optional float discount_price = 10;
    optional google.protobuf.Timestamp discount_start_time = 11;
    optional google.protobuf.Timestamp discount_end_time = 12;
    repeated string service_items = 13;
}

message UpdateServicePackageResponse{
    ServicePackage service_package = 1;
}
